--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -21,7 +21,7 @@
             {% for post in posts %}
                 <div class="post">
                     <div class="date">
-                        <p>Опубликовано: {{ post.published_date }}</p>
+                        <p>Опубликовано: {{ post.created_date }}</p>
                     </div>
                     <h1><a href="">{{ post.title }}</a></h1>
                     <p>{{ post.text|linebreaksbr }}</p>
