--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="page-header">
-            <h1><a href="/">Django Girls Blog</a></h1>
+            <h1><a href="/">South Squad girls</a></h1>
         </div>
 
            <div class="content container">
