--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,7 +12,9 @@
 </head>
 <body>
  <div class="page-header">
+     <h1><a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus">New Post</span></a></h1>
         <h1><a href="/">Django Girls Blog</a></h1>
+
     </div>
     <div class="content container">
         <div class="row">
