--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,7 +6,9 @@
                 {{ post.created_date }}
             </div>
         {% endif %}
-        <h1>{{ post.title }}</h1>
+
+        <h1>{{ post.title }}{% if user.is_authenticated %} <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a> {% endif %} </h1>
+
         <p>{{ post.text|linebreaksbr }}</p>
     </div>
 {% endblock %}
